--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <span class="text-muted">very</span> Soon!
         </h1>
       </div>
-      Hi there👋, thanks for stopping for stopping by, my name is Dennis Kamau.
+      Hi there👋, thanks for stopping by, my name is Dennis Kamau.
       I am working hard to finish the development of this site.
     </div>
 
