--- a/index.html
+++ b/index.html
@@ -70,8 +70,13 @@
           <span class="text-muted">very</span> Soon!
         </h1>
       </div>
-      Hi there👋, thanks for stopping by, my name is Dennis Kamau.
-      I am working hard to finish the development of this site.
+      Hi there👋, thanks for stopping by, my name is Dennis Kamau. I am working
+      hard to finish the development of this site.
+    </div>
+    <br />
+    <div class="container border border-info">
+      <h3>Planning Stage</h3>
+      <img src="/assets/img/Web 1920 – 1.png" alt="web design" width="768px" />
     </div>
 
     <script
