--- a/index.html
+++ b/index.html
@@ -74,9 +74,27 @@
       hard to finish the development of this site.
     </div>
     <br />
-    <div class="container border border-info">
-      <h3>Planning Stage</h3>
-      <img src="/assets/img/Web 1920 – 1.png" alt="web design" width="768px" />
+    <div class="container">
+      <h3>Design Stage</h3>
+      <div class="">
+        <h3>Web Version</h3>
+        <img class="border border-info"
+          src="/assets/img/Web 1920 – 1.png"
+          alt="design for web"
+          width="768px"
+        />
+      </div>
+      <br />
+      <div class="row justify-content-center">
+        <div class="col-sm-12">
+          <h3>Mobile Version</h3>
+          <img
+            class="border border-info"
+            src="/assets/img/Google Pixel 4, 4XL – 1.png"
+            alt="design for mobile"
+          />
+        </div>
+      </div>
     </div>
 
     <script
