include canonical link

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dennis Kamau | Web & Mobile Developer</title>
+    <link rel="canonical" href=" { { https://www.denmau.me } }{ { index.html } }" />
     <!-- bootsrap -->
     <link
       rel="stylesheet"
@@ -21,6 +22,11 @@
       integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
       crossorigin="anonymous"
     />
+    <script type="text/javascript">
+    var host = "denmau.me";
+    if ((host == window.location.host) && (window.location.protocol != "https:"))
+        window.location.protocol = "https";
+</script>
   </head>
   <body>
     <header>
