incorporate Cloudflare Web Analytics

--- a/index.html
+++ b/index.html
@@ -118,5 +118,9 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+
+<!-- Cloudflare Web Analytics -->
+<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "7c6a28636ca84f3b9c71d413ca7fd007"}'></script>
+<!-- End Cloudflare Web Analytics -->
   </body>
 </html>
