optmize colors and font size

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
     <div class="container main-container">
       <div class="flexed">
         <div class="container">
-          <h3 class="title-text">Hey ----------------------------------</h3>
+          <h3 class="title-text">Hey ---------------------</h3>
           <br />
           <h2 class="site-title animate__animated animate__bounceInDown">I'M DENNIS KAMAU</h2>
           <br />
-          <h4 class="site-slogan animate__animated animate__backInRight">CS UNDERGRAD | SOFTWARE ENGINEER</h4>
+          <h4 class="site-slogan animate__animated animate__backInRight">UNDERGRADUATE | SOFTWARE ENGINEER</h4>
         </div>
       </div>
       <div class="tag-line">
