fix brocken links

--- a/index.html
+++ b/index.html
@@ -102,22 +102,22 @@
           <div class="container social-media-container">
             <div class="social-media">
               <i class="fa fa-linkedin"></i>
-              <a href="https:www.linkedin.com/in/denmau" target="_blank" rel="noopener">Linked In</a>
+              <a href="https:www.linkedin.com/in/denmau" target="_blank">Linked In</a>
             </div>
 
             <div class="social-media">
               <i class="fa fa-twitter"></i>
-              <a href="https:www.twitter.com/denmau6" target="_blank" rel="noopener">Twitter</a>
+              <a href="https:www.twitter.com/denmau6" target="_blank">Twitter</a>
             </div>
 
             <div class="social-media">
               <i class="fa fa-github"></i>
-              <a href="https://github.com/denmau" target="_blank" rel="noopener">GitHub</a>
+              <a href="https://github.com/denmau" target="_blank">GitHub</a>
             </div>
 
             <div class="social-media">
               <i class="fa fa-envelope"></i>
-              <a href="mailto:dmkamau475@gmail.com" target="_blank" rel="noopener">Email Me</a>
+              <a href="mailto:dmkamau475@gmail.com" target="_blank">Email Me</a>
             </div>
           </div>
         </div>
