--- a/index.html
+++ b/index.html
@@ -102,17 +102,17 @@
           <div class="container social-media-container">
             <div class="social-media">
               <i class="fa fa-linkedin"></i>
-              <a href="https:www.linkedin.com/in/denmau" target="_blank">Linked In</a>
+              <a href="https://www.linkedin.com/in/denmau" target="_blank">Linked In</a>
             </div>
 
             <div class="social-media">
               <i class="fa fa-twitter"></i>
-              <a href="https:www.twitter.com/denmau6" target="_blank">Twitter</a>
+              <a href="https://www.twitter.com/denmau6" target="_blank">Twitter</a>
             </div>
 
             <div class="social-media">
               <i class="fa fa-github"></i>
-              <a href="https://github.com/denmau" target="_blank">GitHub</a>
+              <a href="https://www.github.com/denmau" target="_blank">GitHub</a>
             </div>
 
             <div class="social-media">
