add contact form

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dennis Kamau | Software Engineer</title>
-    <link rel="canonical" href=" { { https://www.denmau.me } }{ { index.html } }" />
+    <link
+      rel="canonical"
+      href=" { { https://www.denmau.me } }{ { index.html } }"
+    />
     <!-- bootsrap -->
     <link
       rel="stylesheet"
@@ -13,20 +16,32 @@
       crossorigin="anonymous"
     />
     <!-- animate -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <!-- Font Awesome  -->
     <script src="https://use.fontawesome.com/fa8887939e.js"></script>
+    <!-- Page Clip Form Submission -->
+    <link
+      rel="stylesheet"
+      href="https://s.pageclip.co/v1/pageclip.css"
+      media="screen"
+    />
     <!-- Main stylesheet -->
     <link rel="stylesheet" href="/css/index.css" />
     <script type="text/javascript">
       var host = "denmau.me";
-      if (host == window.location.host && window.location.protocol != "https:") window.location.protocol = "https";
+      if (host == window.location.host && window.location.protocol != "https:")
+        window.location.protocol = "https";
     </script>
   </head>
   <body>
     <header>
       <!-- Navigation bar -->
-      <nav class="navbar navbar-expand-md justify-content-between animate__animated animate__fadeInUpBig">
+      <nav
+        class="navbar navbar-expand-md justify-content-between animate__animated animate__fadeInUpBig"
+      >
         <a href="https://www.denmau.me" class="navbar-brand">
           <img src="/img/brand_abstract.png" alt="denmau logo" height="60" />
           <span class="branding">denmau</span>
@@ -41,14 +56,22 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span><img src="/img/iconmonstr-menu-1.png" alt="menu icon" height="20" /></span>
+          <span
+            ><img src="/img/iconmonstr-menu-1.png" alt="menu icon" height="20"
+          /></span>
         </button>
 
         <div class="collapse navbar-collapse text-right" id="navbarText">
           <div class="navbar-nav ml-auto flex-nowrap">
-            <a class="nav-item nav-link active" href="https://www.denmau.me"><span class="navigation-item">Home</span></a>
-            <a class="nav-item nav-link" href="#aboutMe"><span class="navigation-item">About</span></a>
-            <a class="nav-item nav-link" href="#contactMe"><span class="navigation-item">Contact</span></a>
+            <a class="nav-item nav-link active" href="https://www.denmau.me"
+              ><span class="navigation-item">Home</span></a
+            >
+            <a class="nav-item nav-link" href="#aboutMe"
+              ><span class="navigation-item">About</span></a
+            >
+            <a class="nav-item nav-link" href="#contactMe"
+              ><span class="navigation-item">Contact</span></a
+            >
           </div>
         </div>
         <!-- Navigation Bar End -->
@@ -59,36 +82,45 @@
         <div class="container">
           <h3 class="title-text">Hey ---------------------</h3>
           <br />
-          <h2 class="site-title animate__animated animate__bounceInDown">I'M DENNIS KAMAU</h2>
+          <h2 class="site-title animate__animated animate__bounceInDown">
+            I'M DENNIS KAMAU
+          </h2>
           <br />
-          <h4 class="site-slogan animate__animated animate__backInRight">UNDERGRADUATE | SOFTWARE ENGINEER</h4>
+          <h4 class="site-slogan animate__animated animate__backInRight">
+            UNDERGRADUATE | SOFTWARE ENGINEER
+          </h4>
         </div>
       </div>
       <div class="tag-line">
-        <p class="animate__animated animate__bounceInDown">I am a Freelance Full Stack Developer and an undergraduate based in Kenya.</p>
+        <p class="animate__animated animate__bounceInDown">
+          I am a Freelance Full Stack Developer and an undergraduate based in
+          Kenya.
+        </p>
       </div>
     </div>
     <br />
     <section id="aboutMe">
       <div class="container">
         <h2 class="sub-title">About Me</h2>
-        <p>I am an undergraduate at South Eastern Kenya University, studying Computer Science.</p>
+        <p>
+          I am an undergraduate at South Eastern Kenya University, studying
+          Computer Science.
+        </p>
         <p>I love creating solutions both for mobile and for the web.</p>
         <div class="row">
           <div class="col-md-6">
             <h4 class="mt-2">🌱 I’m currently learning ..</h4>
             <ul class="skillset">
-              <li>Machine Learning</li>
+              <li>Android Development with Java</li>
               <li>Data Structures & Algorithms</li>
             </ul>
           </div>
           <div class="col-md-6">
             <h4 class="mt-2">🔭Skills</h4>
             <ul class="skillset">
-              <li>Python Programming</li>
-              <li>Web Programming with Java (Spring Boot)</li>
-              <li>Mobile programming with Java</li>
-              <li>Front-End Development: Bootstrap, JS</li>
+              <li>Java Web Development with Spring Boot and Vaadin</li>
+              <li>Front-End Development: Bootstrap (HTML, CSS)</li>
+              <li>JavaScript</li>
             </ul>
           </div>
         </div>
@@ -102,12 +134,16 @@
           <div class="container social-media-container">
             <div class="social-media">
               <i class="fa fa-linkedin"></i>
-              <a href="https://www.linkedin.com/in/denmau" target="_blank">Linked In</a>
+              <a href="https://www.linkedin.com/in/denmau" target="_blank"
+                >Linked In</a
+              >
             </div>
 
             <div class="social-media">
               <i class="fa fa-twitter"></i>
-              <a href="https://www.twitter.com/denmau6" target="_blank">Twitter</a>
+              <a href="https://www.twitter.com/denmau6" target="_blank"
+                >Twitter</a
+              >
             </div>
 
             <div class="social-media">
@@ -122,14 +158,79 @@
           </div>
         </div>
       </div>
+
+      <div class="container">
+        <!-- Contact Form Start -->
+        <form
+          action="https://send.pageclip.co/e76zC4PmHNLeDcDrHMbqag1y9aLlyG6O/leave-message"
+          class="pageclip-form"
+          method="post"
+        >
+          <br />
+          <h4 class="contact-form-header">Contact Form</h4>
+          <div class="form-group row">
+            <label for="name" class="col-sm-2 col-form-label">Your Name</label>
+            <div class="col-sm-10">
+              <input
+                type="text"
+                class="form-control"
+                name="name"
+                placeholder="Your Name"
+              />
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="email" class="col-sm-2 col-form-label">Email</label>
+            <div class="col-sm-10">
+              <input
+                type="email"
+                class="form-control"
+                name="email"
+                placeholder="Email Address"
+              />
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="inputMessage" class="col-sm-2 col-form-label"
+              >Message</label
+            >
+            <div class="col-sm-10">
+              <textarea
+                style="width: 100%"
+                name="message"
+                class="form-control"
+                id="inputMessage"
+                placeholder="Message"
+              ></textarea>
+            </div>
+          </div>
+          <div class="d-flex justify-content-center">
+            <button
+              type="submit"
+              class="pageclip-form__submit btn btn-primary text-center"
+              style="width: 70%"
+            >
+              <span>Send Message</span>
+            </button>
+          </div>
+        </form>
+        <!-- Contac Form End -->
+      </div>
     </section>
     <hr />
     <footer class="text-center">
       <p>
-        All rights reserved | Copyright ©2021 | Made with ❤ by <a href="https://www.github.com/denmau" target="_blank" rel="noopener">Dennis Kamau</a>
+        All rights reserved | Copyright ©2021 | Made with ❤ by
+        <a href="https://www.github.com/denmau" target="_blank" rel="noopener"
+          >Dennis Kamau</a
+        >
       </p>
     </footer>
 
+    <!-- Page Clip Form Submission -->
+    <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
+
+    <!-- Bootstrap  -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -147,7 +248,11 @@
     ></script>
 
     <!-- Cloudflare Web Analytics -->
-    <script defer src="https://static.cloudflareinsights.com/beacon.min.js" data-cf-beacon='{"token": "7c6a28636ca84f3b9c71d413ca7fd007"}'></script>
+    <script
+      defer
+      src="https://static.cloudflareinsights.com/beacon.min.js"
+      data-cf-beacon='{"token": "7c6a28636ca84f3b9c71d413ca7fd007"}'
+    ></script>
     <!-- End Cloudflare Web Analytics -->
   </body>
 </html>
