--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
             <label for="name" class="col-sm-2 col-form-label">Your Name</label>
             <div class="col-sm-10">
               <input
+                required
                 type="text"
                 class="form-control"
                 name="name"
@@ -183,6 +184,7 @@
             <label for="email" class="col-sm-2 col-form-label">Email</label>
             <div class="col-sm-10">
               <input
+                required
                 type="email"
                 class="form-control"
                 name="email"
@@ -196,6 +198,7 @@
             >
             <div class="col-sm-10">
               <textarea
+                required
                 style="width: 100%"
                 name="message"
                 class="form-control"
@@ -208,7 +211,7 @@
             <button
               type="submit"
               class="pageclip-form__submit btn btn-primary text-center"
-              style="width: 70%"
+              style="width: 68%"
             >
               <span>Send Message</span>
             </button>
@@ -227,6 +230,8 @@
       </p>
     </footer>
 
+    <!-- Custom JS FIle  -->
+    <script src="/js/index.js"></script>
     <!-- Page Clip Form Submission -->
     <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
 
