--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             </button>
           </div>
         </form>
-        <!-- Contac Form End -->
+        <!-- Contact Form End -->
       </div>
     </section>
     <hr />
