--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
             <label for="name" class="col-sm-2 col-form-label">Your Name</label>
             <div class="col-sm-10">
               <input
+                required
                 type="text"
                 class="form-control"
                 name="name"
@@ -198,6 +199,7 @@
             <label for="email" class="col-sm-2 col-form-label">Email</label>
             <div class="col-sm-10">
               <input
+                required
                 type="email"
                 class="form-control"
                 name="email"
