--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
             <h4 class="mt-2">🔭Skills</h4>
             <ul class="skillset">
               <li>Java Web Development with Spring Boot and Vaadin</li>
-              <li>Front-End Development: HTML, CSS</li>
-              <li>JavaScript</li>
+              <li>Front-End Development: Bootstrap (HTML, CSS)</li>
               <li>Database: SQL</li>
             </ul>
           </div>
