--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dennis Kamau | Software Engineer</title>
-    <link
-      rel="canonical"
-      href=" { { https://www.denmau.me } }{ { index.html } }"
-    />
+    <link rel="canonical" href=" { { https://www.denmau.me } }{ { index.html } }" />
     <!-- bootsrap -->
     <link
       rel="stylesheet"
@@ -16,24 +13,16 @@
       crossorigin="anonymous"
     />
     <!-- animate -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- Font Awesome  -->
     <script src="https://use.fontawesome.com/fa8887939e.js"></script>
     <!-- Page Clip Form Submission -->
-    <link
-      rel="stylesheet"
-      href="https://s.pageclip.co/v1/pageclip.css"
-      media="screen"
-    />
+    <link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen" />
     <!-- Main stylesheet -->
     <link rel="stylesheet" href="/css/index.css" />
     <script type="text/javascript">
       var host = "denmau.me";
-      if (host == window.location.host && window.location.protocol != "https:")
-        window.location.protocol = "https";
+      if (host == window.location.host && window.location.protocol != "https:") window.location.protocol = "https";
 
       // Collect all the inputs
       const inputs = document.querySelectorAll("input, select, textarea");
@@ -54,9 +43,7 @@
   <body>
     <header>
       <!-- Navigation bar -->
-      <nav
-        class="navbar navbar-expand-md justify-content-between animate__animated animate__fadeInUpBig"
-      >
+      <nav class="navbar navbar-expand-md justify-content-between animate__animated animate__fadeInUpBig">
         <a href="https://www.denmau.me" class="navbar-brand">
           <img src="/img/brand_abstract.png" alt="denmau logo" height="60" />
           <span class="branding">denmau</span>
@@ -71,9 +58,7 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span
-            ><img src="/img/iconmonstr-menu-1.png" alt="menu icon" height="20"
-          /></span>
+          <span><img src="/img/iconmonstr-menu-1.png" alt="menu icon" height="20" /></span>
         </button>
 
         <div class="collapse navbar-collapse text-right" id="navbarText">
@@ -81,57 +66,46 @@
             <a class="nav-item nav-link active" href="https://www.denmau.me"
               ><span class="navigation-item">Home</span></a
             >
-            <a class="nav-item nav-link" href="#aboutMe"
-              ><span class="navigation-item">About</span></a
-            >
-            <a class="nav-item nav-link" href="#contactMe"
-              ><span class="navigation-item">Contact</span></a
-            >
+            <a class="nav-item nav-link" href="#aboutMe"><span class="navigation-item">About</span></a>
+            <a class="nav-item nav-link" href="#contactMe"><span class="navigation-item">Contact</span></a>
           </div>
         </div>
-        <!-- Navigation Bar End -->
       </nav>
+      <!-- Navigation Bar End -->
     </header>
-    <div class="container main-container">
-      <div class="flexed">
-        <div class="container">
-          <h3 class="title-text">Hey ---------------------</h3>
-          <br />
-          <h2 class="site-title animate__animated animate__bounceInDown">
-            I'M DENNIS KAMAU
-          </h2>
-          <br />
-          <h4 class="site-slogan animate__animated animate__backInRight">
-            UNDERGRADUATE | SOFTWARE ENGINEER
-          </h4>
+    <section>
+      <div class="container main-container">
+        <div class="flexed">
+          <div class="container">
+            <h3 class="title-text">Hey <span class="line"></span></h3>
+            <br />
+            <h2 class="site-title animate__animated animate__bounceInDown">I'M DENNIS KAMAU</h2>
+            <br />
+            <h4 class="site-slogan animate__animated animate__backInRight">UNDERGRADUATE | SOFTWARE ENGINEER</h4>
+          </div>
+        </div>
+        <div class="tag-line">
+          <p class="animate__animated animate__bounceInDown">Computer Science student and upcoming Software Engineer</p>
         </div>
       </div>
-      <div class="tag-line">
-        <p class="animate__animated animate__bounceInDown">
-          I am a Freelance Full Stack Developer and an undergraduate based in
-          Kenya.
-        </p>
-      </div>
-    </div>
-    <br />
+      <br />
+    </section>
+    <!-- About Me Section start -->
     <section id="aboutMe">
       <div class="container">
-        <h2 class="sub-title">About Me</h2>
-        <p>
-          I am an undergraduate at South Eastern Kenya University, studying
-          Computer Science.
-        </p>
-        <p>I love creating solutions both for mobile and for the web.</p>
+        <h2 class="sub-title">😊About Me</h2>
+        <p>I am an undergraduate at South Eastern Kenya University, studying Computer Science.</p>
+        <p>I am very passionate about web Development; Machine Learning & AI in particular.</p>
         <div class="row">
           <div class="col-md-6">
-            <h4 class="mt-2">🌱 I’m currently learning ..</h4>
+            <h6 class="mt-2">🌱 I’m currently learning ..</h6>
             <ul class="skillset">
               <li>Android Development with Java</li>
               <li>Data Structures & Algorithms</li>
             </ul>
           </div>
           <div class="col-md-6">
-            <h4 class="mt-2">🔭Skills</h4>
+            <h6 class="mt-2">🔭Skills</h6>
             <ul class="skillset">
               <li>Java Web Development with Spring Boot and Vaadin</li>
               <li>Front-End Development: Bootstrap (HTML, CSS)</li>
@@ -139,111 +113,144 @@
             </ul>
           </div>
         </div>
+
+        <!-- Achievements, Scholarships and Awards -->
+        <div class="row mt-2">
+          <div class="col-md-12">
+            <h2 class="sub-title">🏆 Acievements, Scholarships & Awards</h2>
+            <ul>
+              <li>Emerged position 1 at Naivasha Girls National Computer Contest 2018.</li>
+              <li>
+                Awarded Machine Learning E-degree Scholarship (<a href="https://www.deeplearning.ai" target="_blank"
+                  >deeplearning.ai</a
+                >).
+              </li>
+              <li>Peer Educator at South Eastern Kenya University.</li>
+              <li>
+                Participated in Andela
+                <a href="https://buildforsdg.andela.com" target="_blank">#BuildforSDG</a>
+                challenge 2020, sponsored by Facebook.
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Educational Background -->
+        <div class="row mt-2">
+          <div class="col-md-12">
+            <h2 class="sub-title">🏫Educational Background</h2>
+            <div class="px-5 mt-3">
+              <p><b>2019 to Present</b></p>
+              <p><b>South Eastern Kenya University</b></p>
+              <p>Bachelor of Science (Computer Science)</p>
+              <p>Expected Graduation Date: Aug 2024</p>
+              <hr />
+              <p><b>2015 to 2018</b></p>
+              <p><b>RONGAI AGRICULTURAL & TECHNICAL HIGH SCHOOL</b></p>
+              <p>Kenya Certificate of Secondary Education (KCSE)</p>
+              <p>Grade: B (plain)</p>
+              <hr />
+            </div>
+          </div>
+        </div>
       </div>
       <br />
     </section>
+    <!-- About Me Section end -->
+
+    <!-- Contact Me Section start -->
     <section id="contactMe">
-      <div class="container">
-        <h2 class="sub-title">Contact Me</h2>
-        <div class="row">
-          <div class="container social-media-container">
-            <div class="social-media">
-              <i class="fa fa-linkedin"></i>
-              <a href="https://www.linkedin.com/in/denmau" target="_blank"
-                >Linked In</a
-              >
+      <div class="container mt-2">
+        <div class="col-md-12">
+          <h2 class="sub-title">Contact Me</h2>
+          <div class="row">
+            <div class="col-md-6 col-sm-12 d-flex">
+              <div class="social-media col-sm-12 col-md-6 justify-content-sm-center">
+                <a href="https://www.linkedin.com/in/denmau" target="_blank"
+                  ><i class="fa fa-linkedin"></i><span class="px-2"></span>Linked In</a
+                >
+              </div>
+
+              <div class="social-media col-sm-12 col-md-6 justify-content-sm-center">
+                <a href="https://www.twitter.com/denmau6" target="_blank"
+                  ><i class="fa fa-twitter"></i><span class="px-2"></span>Twitter</a
+                >
+              </div>
             </div>
 
-            <div class="social-media">
-              <i class="fa fa-twitter"></i>
-              <a href="https://www.twitter.com/denmau6" target="_blank"
-                >Twitter</a
-              >
-            </div>
+            <div class="col-md-6 col-sm-12 d-flex">
+              <div class="social-media col-sm-12 col-md-6 justify-content-sm-center">
+                <a href="https://www.github.com/denmau" target="_blank"
+                  ><i class="fa fa-github"></i><span class="px-2"></span>GitHub</a
+                >
+              </div>
 
-            <div class="social-media">
-              <i class="fa fa-github"></i>
-              <a href="https://www.github.com/denmau" target="_blank">GitHub</a>
-            </div>
-
-            <div class="social-media">
-              <i class="fa fa-envelope"></i>
-              <a href="mailto:dmkamau475@gmail.com" target="_blank">Email Me</a>
+              <div class="social-media col-sm-12 col-md-6 justify-content-sm-center">
+                <a href="mailto:dmkamau475@gmail.com"
+                  ><i class="fa fa-envelope"></i><span class="px-2"></span>Email Me</a
+                >
+              </div>
             </div>
           </div>
         </div>
       </div>
 
-      <div class="container">
-        <!-- Contact Form Start -->
-        <form
-          action="https://send.pageclip.co/e76zC4PmHNLeDcDrHMbqag1y9aLlyG6O/leave-message"
-          class="pageclip-form"
-          method="post"
-        >
-          <br />
-          <h4 class="contact-form-header">Contact Form</h4>
-          <div class="form-group row">
-            <label for="name" class="col-sm-2 col-form-label">Your Name</label>
-            <div class="col-sm-10">
-              <input
-                required
-                type="text"
-                class="form-control"
-                name="name"
-                placeholder="Your Name"
-              />
+      <div class="container px-md-5" style{width:100%}>
+        <div class="col-md-12">
+          <!-- Contact Form Start -->
+          <form
+            action="https://send.pageclip.co/e76zC4PmHNLeDcDrHMbqag1y9aLlyG6O/leave-message"
+            class="pageclip-form"
+            method="post"
+          >
+            <h4 class="contact-form-header mt-2">Contact Form</h4>
+            <div class="form-group row">
+              <label for="name" class="col-sm-2 col-form-label">Your Name</label>
+              <div class="col-sm-10">
+                <input required type="text" class="form-control" name="name" placeholder="Your Name" />
+              </div>
             </div>
-          </div>
-          <div class="form-group row">
-            <label for="email" class="col-sm-2 col-form-label">Email</label>
-            <div class="col-sm-10">
-              <input
-                required
-                type="email"
-                class="form-control"
-                name="email"
-                placeholder="Email Address"
-              />
+            <div class="form-group row">
+              <label for="email" class="col-sm-2 col-form-label">Email</label>
+              <div class="col-sm-10">
+                <input required type="email" class="form-control" name="email" placeholder="Email Address" />
+              </div>
             </div>
-          </div>
-          <div class="form-group row">
-            <label for="inputMessage" class="col-sm-2 col-form-label"
-              >Message</label
-            >
-            <div class="col-sm-10">
-              <textarea
-                required
-                style="width: 100%"
-                name="message"
-                class="form-control"
-                id="inputMessage"
-                placeholder="Message"
-              ></textarea>
+            <div class="form-group row">
+              <label for="inputMessage" class="col-sm-2 col-form-label">Message</label>
+              <div class="col-sm-10">
+                <textarea
+                  required
+                  style="width: 100%"
+                  name="message"
+                  class="form-control"
+                  id="inputMessage"
+                  placeholder="Message"
+                ></textarea>
+              </div>
             </div>
-          </div>
-          <div class="d-flex justify-content-center">
-            <button
-              type="submit"
-              class="pageclip-form__submit btn btn-primary text-center"
-              style="width: 68%"
-            >
-              <span>Send Message</span>
-            </button>
-          </div>
-        </form>
-        <!-- Contact Form End -->
+            <div class="d-flex justify-content-center">
+              <button type="submit" class="pageclip-form__submit btn btn-primary text-center" style="width: 68%">
+                <span>Send Message</span>
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
+      <!-- Contact Form End -->
     </section>
+    <!-- Contact Me Section end -->
     <hr />
-    <footer class="text-center">
-      <p>
-        All rights reserved | Copyright ©2021 | Made with ❤ by
-        <a href="https://www.github.com/denmau" target="_blank" rel="noopener"
-          >Dennis Kamau</a
-        >
-      </p>
-    </footer>
+    <div class="container-fluid">
+      <footer class="text-center">
+        <p>
+          All rights reserved | Copyright ©2021
+          <br />
+          Made with ❤ by
+          <a href="https://www.github.com/denmau" target="_blank" rel="noopener">Dennis Kamau</a>
+        </p>
+      </footer>
+    </div>
 
     <!-- Custom JS FIle  -->
     <script src="/js/index.js"></script>
