--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@
           <div class="col-md-12">
             <h2 class="sub-title">🏫Educational Background</h2>
             <div class="px-5 mt-3">
-              <p><b>2019 to Present</b></p>
+              <p>2019 to Present</p>
               <p><b>South Eastern Kenya University</b></p>
               <p>Bachelor of Science (Computer Science)</p>
               <p>Expected Graduation Date: Aug 2024</p>
               <hr />
-              <p><b>2015 to 2018</b></p>
+              <p>2015 to 2018</p>
               <p><b>RONGAI AGRICULTURAL & TECHNICAL HIGH SCHOOL</b></p>
               <p>Kenya Certificate of Secondary Education (KCSE)</p>
               <p>Grade: B (plain)</p>
